# chatbot-RL

./: README.md  main.py  pyproject.toml
data/: S tay sinh vien.rar  notebook_content.txt
data/Sổ tay sinh viên/: .~lock.1. QĐ-1226-Quy che dao tao dai hoc-DHTL (ban hanh).docx#  0. Mục lục Sổ tay sinh viên K65.doc  1. QĐ-1226-Quy che dao tao dai hoc-DHTL (ban hanh).docx  10. QĐ 1089 thi OLP môn học (Final 10-5-2023).doc  11. QĐ về Học phí final (25-10-2021).doc  12. QD ngoại trú.doc  2. QĐ về tiếng anh CTTT.300921.QD.1315.doc  3. QD1767.TA tăng cường ban hanh.doc  5. QD_1038_16.07.2021_GDTC.docx  6. Quy định về tổ chức thi trực tuyến.docx  7. QĐ đánh giá KQRL (Final 18-8-2016).doc  8. QĐ ve HBKKHT, HBCS (final 12-5-2021).doc  9. QĐ Khen thưởng - KL (Final 10-8-2016).doc
src/: environment.py
src/agents/: dqn.py  q_learning.py
src/rag/: retriever.py
